--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="GOOGLE_API_KEY">AIzaSyCPlPFb2kNRoblk-SJcLKN1uuwDAw8V8Mw</string>
+    <string name="GOOGLE_API_KEY">//TODO " put the code from You tube API</string>
 </resources>
